--- a/src/assets/scss/components/year.scss
+++ b/src/assets/scss/components/year.scss
@@ -57,11 +57,14 @@
   }
 
   &__list {
-    display: none;
+    // display: none;
+    overflow: auto;
     margin: 0;
     padding: 1rem;
+    max-height: 16.5rem;
     background-color: $grey02;
     list-style: none;
+    box-sizing: border-box;
 
     @media (min-width: $min-minimal-width) {
       padding: 1.3rem 1.35rem;
