화면단 작업중

--- a/src/assets/scss/views/search.scss
+++ b/src/assets/scss/views/search.scss
@@ -196,7 +196,7 @@
   }
 
   &__to-input {
-    display: none;
+    opacity: 0;
     float: right;
     position: sticky;
     bottom: 3rem;
@@ -214,6 +214,11 @@
     text-shadow: none;
     text-align: center;
     box-shadow: rgba(0,0,0,0.3) 1px 1px 0.7rem;
+    transition: opacity 0.1s;
+
+    &--active {
+      opacity: 1;
+    }
 
     @media (min-width: $min-big-width) {
       width: 3rem;
