--- a/src/assets/scss/components/year.scss
+++ b/src/assets/scss/components/year.scss
@@ -61,6 +61,7 @@
     overflow: auto;
     margin: 0;
     padding: 1rem;
+    min-height: 6.4rem;
     max-height: 16.5rem;
     background-color: $grey02;
     list-style: none;
