--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -45,6 +45,10 @@
     text-shadow: 2px 2px 0.1em rgba(0, 0, 0, 0.8);
     box-sizing: border-box;
 
+    &:not(.masthead--image) {
+      background-color: $main-color
+    }
+
     @media (min-width: $min-big-width) {
       padding: $layout-margin * 5 $layout-margin;
     }
