--- a/src/assets/scss/views/post.scss
+++ b/src/assets/scss/views/post.scss
@@ -153,8 +153,9 @@
 
       &__item {
          display: inline-flex;
+         height: 1.25rem;
          margin: 0;
-         padding: 0.15rem 0.45rem;
+         padding: 0 0.45rem;
          border: 1px solid transparent;
          background-color: $grey07;
          font-size: 0.75rem;
@@ -173,7 +174,7 @@
             gap: 0.4rem;
          }
 
-         &--create-at {
+         &--regdate {
             border-color: $grey03;
          }
 
@@ -237,22 +238,27 @@
 
    &__og-image {
       display: none;
-      overflow: hidden;
       float: right;
       width: 11rem;
       height: 5rem;
       margin: 0.5rem 0.5rem 0 1rem;
-      border: 1px solid $black;
-      background-color: $grey12;
-      box-shadow: rgba(0,0,0,0.2) 0.25rem 0.25rem 0.5rem;
-      box-sizing: border-box;
-      justify-content: center;
-      align-items: center;
-
+      
       @media (min-width: $min-large-width) {
-         display: flex;
+         display: block;
       }
-
+      
+      &__box {
+         display: flex;
+         overflow: hidden;
+         height: 100%;
+         border: 1px solid $black;
+         background-color: $grey12;
+         box-shadow: rgba(0,0,0,0.2) 0.25rem 0.25rem 0.5rem;
+         box-sizing: border-box;
+         justify-content: center;
+         align-items: center;
+      }
+      
       img {
          width: auto;
          height: auto;
