화면단 작업중

--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -46,7 +46,7 @@
     box-sizing: border-box;
 
     &:not(.masthead--image) {
-      background-color: $main-color
+      background-color: $grey14
     }
 
     @media (min-width: $min-big-width) {
