--- a/src/assets/scss/setup/variables.scss
+++ b/src/assets/scss/setup/variables.scss
@@ -68,6 +68,7 @@ $grey10: #6f6f6f !default;
 $grey11: #8b8b8b !default;
 $grey12: #fff !default;
 $grey13: #f3f3f3 !default;
+$grey14: #dddbdd !default;
 $green01: #538204 !default;
 $green02: #7da537 !default;
 $green03: #619409 !default;
