--- a/src/assets/scss/components/sidebar.scss
+++ b/src/assets/scss/components/sidebar.scss
@@ -44,6 +44,18 @@
       }
     }
 
+    &-count {
+      display: inline-block;
+      padding: 0 0.25rem;
+      height: 0.9rem;
+      line-height: 0.9rem;
+      border-radius: 0.2rem;
+      background-color: $black02;
+      font-size: 0.7rem;
+      color: $grey12;
+      text-shadow: rgba(0, 0, 0, 0.8) 1px 1px 0.1em;
+    }
+
     &__no-data {
       font-size: 0.85rem;
       text-align: center;
@@ -112,18 +124,6 @@
             &:hover {
               text-decoration: underline;
             }
-          }
-
-          > span {
-            display: inline-block;
-            padding: 0 0.25rem;
-            height: 0.9rem;
-            line-height: 0.9rem;
-            border-radius: 0.2rem;
-            background-color: $black02;
-            font-size: 0.7rem;
-            color: $grey12;
-            text-shadow: rgba(0, 0, 0, 0.8) 1px 1px 0.1em;
           }
         }
       }
