--- a/src/assets/scss/views/search.scss
+++ b/src/assets/scss/views/search.scss
@@ -8,7 +8,7 @@
   $search-field-height-responsive: 3rem;
 
   &__frm {
-    margin-bottom: 2.5rem;
+    margin-bottom: 1.5rem;
   }
 
   &__field {
@@ -46,7 +46,7 @@
   }
 
   &__detail {
-    margin-top: 1.5rem;
+    margin-top: 1rem;
   }
 
   &__option {
@@ -96,7 +96,7 @@
   }
 
   &__info {
-    margin: 0 0 1.5rem 0;
+    margin: 0 0 1rem 0;
     line-height: 1.5;
 
     &__txt {
@@ -112,6 +112,7 @@
     margin-top: 0.6rem;
     background-color: $black02;
     color: $grey12;
+    font-size: 0.8rem;
 
     @media (min-width: $min-small-width) {
       display: inline-block;
@@ -121,8 +122,8 @@
 
     > i {
       display: inline-flex;
-      width: 1.1rem;
-      height: 1.1rem;
+      width: 1rem;
+      height: 1rem;
       border-radius: 50%;
       background-color: $grey12;
       font-size: 0.85rem;
