--- a/src/assets/scss/basics/base.scss
+++ b/src/assets/scss/basics/base.scss
@@ -150,7 +150,7 @@ input {
     }
   }
 
-  &[type='checkbox'],
+  &[type='checkbox']:not(.ag-input-field-input),
   &[type='radio'] {
     @include sr-only;
     cursor: pointer;
@@ -205,7 +205,7 @@ input {
     }
   }
 
-  &[type='checkbox'] {
+  &[type='checkbox']:not(.ag-input-field-input) {
     &:focus {
       + label {
         &:before {
