--- a/src/assets/scss/basics/base.scss
+++ b/src/assets/scss/basics/base.scss
@@ -98,7 +98,8 @@ input {
   &[type='text'],
   &[type='password'],
   &[type='search'],
-  &[type='number'] {
+  &[type='number'],
+  &:not([type]) {
     height: $input-height;
     padding: 0 0.5rem;
     border-radius: 0;
@@ -124,8 +125,6 @@ input {
     + {
       label {
         position: relative;
-        background-color: $black02;
-        color: $grey12;
 
         &:after {
           content: attr(title);
@@ -151,7 +150,7 @@ input {
   }
 
   &[type='checkbox']:not(.ag-input-field-input),
-  &[type='radio'] {
+  &[type='radio']:not(.ag-input-field-input) {
     @include sr-only;
     cursor: pointer;
     vertical-align: middle;
@@ -162,7 +161,7 @@ input {
     padding: 0.3rem 0.5rem;
   }
 
-  &[type='radio'] {
+  &[type='radio']:not(.ag-input-field-input) {
     &:focus {
       + label {
         &:before {
@@ -298,14 +297,6 @@ textarea {
 input,
 textarea {
   caret-color: auto;
-}
-
-.link {
-  @include link();
-}
-
-.btn {
-  @include btn();
 }
 
 iframe {
@@ -492,113 +483,4 @@ blockquote {
     line-height: 1;
     color: rgba(0, 0, 0, 0.1);
   }
-}
-
-.footnotes {
-  &-list {
-    padding-left: 0;
-  }
-}
-
-.footnote {
-  &-ref {
-    margin: 0 0.1rem;
-    line-height: 1;
-    vertical-align: super;
-  }
-
-  &-item {
-    margin: 0.63em 0;
-    list-style: none;
-
-    p {
-      margin-top: 0;
-      margin-bottom: 0;
-      font-size: 0.8rem;
-      color: $grey;
-    }
-  }
-}
-
-.sr-only {
-  @include sr-only;
-}
-
-.loading {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 4;
-  width: 100%;
-  height: 0.4rem;
-
-  &:before {
-    content: '';
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background-color: $green03;
-    box-shadow: rgba(0, 0, 0, 0.1) 0 0.25rem 0.75rem;
-    animation: loading 0.4s infinite;
-
-    @keyframes loading {
-      0% {
-        width: 0;
-      }
-      100% {
-        width: 100%;
-      }
-    }
-  }
-}
-
-// helper 클래스
-.align {
-  &--left {
-    text-align: left !important;
-  }
-
-  &--center {
-    text-align: center !important;
-  }
-
-  &--right {
-    text-align: right !important;
-  }
-}
-
-.more {
-  display: flex;
-  width: 4rem;
-  height: 2.5rem;
-  margin: 0 auto;
-  padding-top: 0.5rem;
-  background-color: transparent;
-  font-size: 1.8rem;
-  align-items: center;
-  justify-content: center;
-
-  &--disabled {
-    opacity: 0.4;
-    pointer-events: none;
-  }
-}
-
-// Vue Transition
-.fade-enter-active,
-.fade-leave-active {
-  transition: opacity 0.2s;
-}
-.fade-enter,
-.fade-leave-to {
-  opacity: 0;
-}
-.delay-display-none-leave-active {
-  transition: opacity .3s
-}
-.delay-display-none-leave-to {
-  opacity: 1
 }
