--- a/src/assets/scss/basics/ui.scss
+++ b/src/assets/scss/basics/ui.scss
@@ -114,3 +114,18 @@ input.dp__input {
     }
   }
 }
+
+// Data Grid
+.grid-cell {
+  &-left {
+    text-align: left;
+  }
+
+  &-center {
+    text-align: center;
+  }
+
+  &-right {
+    text-align: right;
+  }
+}
