--- a/src/assets/scss/views/guestbook.scss
+++ b/src/assets/scss/views/guestbook.scss
@@ -73,6 +73,7 @@
         display: flex;
         margin-top: 0.7rem;
         font-size: 0.85rem;
+        vertical-align: top;
         align-items: center;
         flex-wrap: wrap;
         gap: 0.35rem;
