--- a/src/assets/scss/components/form.scss
+++ b/src/assets/scss/components/form.scss
@@ -1,6 +1,7 @@
 .form-field {
   &-error {
     display: block;
+    width: 100%;
     margin-bottom: 0.5rem;
     font-size: 0.75rem;
     text-align: left;
