--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,10 +5,10 @@
 
 /* 공통 스타일 */
 
-// 변수
-@import './setup/variables.scss';
-// mixin
-@import './setup/mixins.scss';
+// // 변수
+// @import './setup/variables.scss';
+// // mixin
+// @import './setup/mixins.scss';
 // 폰트
 @import './setup/font.scss';
 // 초기화
