--- a/src/assets/scss/setup/font.scss
+++ b/src/assets/scss/setup/font.scss
@@ -2,19 +2,19 @@
   font-family: 'SCDream';
   font-style: normal;
   font-weight: 400;
-  src: local('SCDream'), url('./fonts/SCDreamRegular.woff2') format('woff2');
+  src: local('SCDream'), url('@/assets/scss/fonts/SCDreamRegular.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'SCDream';
   font-style: normal;
   font-weight: 600;
-  src: local('SCDream'), url('./fonts/SCDreamMedium.woff2') format('woff2');
+  src: local('SCDream'), url('@/assets/scss/fonts/SCDreamMedium.woff2') format('woff2');
 }
 
 @font-face {
   font-family: 'SCDream';
   font-style: normal;
   font-weight: 700;
-  src: local('SCDream'), url('./fonts/SCDreamBold.woff2') format('woff2');
+  src: local('SCDream'), url('@/assets/scss/fonts/SCDreamBold.woff2') format('woff2');
 }
