화면단 작업중

--- a/src/assets/scss/basics/ui.scss
+++ b/src/assets/scss/basics/ui.scss
@@ -7,6 +7,12 @@
 .btn {
   @include btn();
 
+  // 버튼 크기
+  &--block {
+    display: block;
+    width: 100%;
+  }
+
   // 색상 버튼
   &--primary {
     background-color: $main-color;
