화면단 작업중

--- a/src/assets/scss/basics/ui.scss
+++ b/src/assets/scss/basics/ui.scss
@@ -135,3 +135,14 @@ input.dp__input {
     text-align: right;
   }
 }
+
+// Splitter
+.splitpanes__splitter {
+  ~ .splitpanes__pane {
+    .pane {
+      &__content-wrapper {
+        padding: 1rem;
+      }
+    }
+  }
+}
