화면단 작업중

--- a/src/assets/scss/setup/variables.scss
+++ b/src/assets/scss/setup/variables.scss
@@ -69,6 +69,7 @@ $grey11: #8b8b8b !default;
 $grey12: #fff !default;
 $grey13: #f3f3f3 !default;
 $grey14: #dddbdd !default;
+$grey15: #babfc7 !default;
 $green01: #538204 !default;
 $green02: #7da537 !default;
 $green03: #619409 !default;
