화면단 작업중

--- a/src/assets/scss/views/post.scss
+++ b/src/assets/scss/views/post.scss
@@ -71,5 +71,18 @@
             justify-content: space-between;
          }
       }
+
+      &__category {
+         &-filter {
+            &-select {
+               display: block;
+               width: 100%;
+            }
+
+            &-btn {
+               min-width: 0;
+            }
+         }
+      }
    }
 }
