--- a/src/assets/scss/basics/ui.scss
+++ b/src/assets/scss/basics/ui.scss
@@ -146,3 +146,86 @@ input.dp__input {
     }
   }
 }
+
+// Tab
+.tabs-component-tabs {
+  margin-bottom: 0.25rem;
+  padding-left: 0;
+
+  @media (min-width: $min-small-width) {
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-start;
+    margin-bottom: -1px;
+  }
+}
+
+.tabs-component-tab {
+  font-size: 0.7rem;
+  font-weight: 600;
+  list-style: none;
+  color: #999;
+
+  &:hover {
+    color: #666;
+  }
+
+  &.is-active {
+    background-color: $main-color;
+    color: $grey12;
+
+    @media (min-width: $min-small-width) {
+      z-index: 2;
+      transform: translateY(0);
+    }
+  }
+
+  &.is-disabled * {
+    color: #cdcdcd;
+    cursor: not-allowed !important;
+  }
+
+  @media (min-width: $min-small-width) {
+    transform: translateY(2px);
+    transition: transform .3s ease;
+  }
+}
+
+.tabs-component-tab-a {
+  display: flex;
+  align-items: center;
+  padding: 0.6rem 1rem;
+  font-size: 0.8rem;
+  color: inherit;
+  text-decoration: none;
+}
+
+.tabs-component-panels {
+  position: relative;
+  padding: 1rem;
+  border: 1px solid $grey06;
+
+  @media (min-width: $min-small-width) {
+    padding: 1.3rem 1rem;
+  }
+}
+
+.tabs-component-btn {
+  padding: 0.2rem 0.4rem;
+  border-radius: 3px;
+  border: 1px solid #7aa7c7;
+  background: #e1ecf4;
+  color: #39739d;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #b3d3ea;
+    color: #2c5777;
+  }
+
+  &:active {
+    background-color: #a0c7e4;
+    box-shadow: none;
+    color: #2c5777;
+  }
+}
