--- a/src/assets/scss/basics/ui.scss
+++ b/src/assets/scss/basics/ui.scss
@@ -173,6 +173,7 @@ input.dp__input {
   &.is-active {
     background-color: $main-color;
     color: $grey12;
+    text-shadow: rgba(0,0,0,0.8) 1px 1px 0.1em;
 
     @media (min-width: $min-small-width) {
       z-index: 2;
@@ -194,8 +195,8 @@ input.dp__input {
 .tabs-component-tab-a {
   display: flex;
   align-items: center;
-  padding: 0.6rem 1rem;
-  font-size: 0.8rem;
+  padding: 0.75rem 1.5rem;
+  font-size: 0.9rem;
   color: inherit;
   text-decoration: none;
 }
