--- a/src/assets/scss/components/satisfaction.scss
+++ b/src/assets/scss/components/satisfaction.scss
@@ -15,7 +15,7 @@
       display: flex;
       position: relative;
       margin: 0;
-      padding: 0.5rem $size 0.5rem 2rem;
+      padding: 0.5rem $size 0 2rem;
       font-weight: 700;
       font-size: 1rem;
       line-height: 1.4;
@@ -23,7 +23,7 @@
       flex-wrap: wrap;
   
       @media (min-width: $min-big-width) {
-        padding: 0.5rem $size - 0.5 0.5rem 2rem;
+        padding: 0.5rem $size - 0.5 0 2rem;
       }
   
       i {
@@ -40,12 +40,8 @@
     &__field {
       display: flex;
       flex-wrap: wrap;
-      margin-top: 0.8rem;
+      margin-top: 0.5rem;
       padding: 0 $size;
-  
-      @media (min-width: $min-small-width) {
-        margin-top: 0.9rem;
-      }
   
       &:first-of-type {
         gap: 0.4rem 1rem;
