--- a/src/assets/scss/views/guestbook.scss
+++ b/src/assets/scss/views/guestbook.scss
@@ -74,10 +74,6 @@
         flex-wrap: wrap;
         gap: 0.35rem;
 
-        > label {
-          margin-top: 0.3rem;
-        }
-
         @media (min-width: $min-medium-width) {
           display: inline-flex;
           margin-top: 0;
@@ -449,7 +445,6 @@
         display: flex;
         width: 100%;
         flex-wrap: wrap;
-        align-items: center;
         gap: 0.7rem;
   
         @media (min-width: $min-medium-width) {
@@ -458,6 +453,7 @@
   
         &-inner {
           width: 100%;
+          height: 100%;
   
           @media (min-width: $min-medium-width) {
             display: flex;
@@ -468,15 +464,7 @@
   
         label {
           display: block;
-          margin-top: 0.7rem;
           font-size: 0.85rem;
-  
-          @media (min-width: $min-medium-width) {
-            display: inline-flex;
-            margin-top: 0;
-            align-items: center;
-            gap: 0.7rem;
-          }
         }
       }
   
