--- a/src/assets/scss/components/sidebar.scss
+++ b/src/assets/scss/components/sidebar.scss
@@ -15,12 +15,13 @@
         font-size: 1rem;
       }
 
-      > i {
+      &-icon {
         position: relative;
+        height: 1rem;
 
         > span {
           position: absolute;
-          top: -1.8rem;
+          top: -2.1rem;
           left: 0;
           width: 10rem;
           height: 1.5rem;
@@ -37,7 +38,7 @@
         }
       }
 
-      > em {
+      &-text {
         display: block;
         width: 100%;
         font-style: normal;
@@ -63,11 +64,7 @@
 
     &-list {
       position: relative;
-      margin: 0;
-
-      & ~ & {
-        margin-top: 1.2rem;
-      }
+      margin: 0 0 1.2rem 0;
 
       &--active {
         cursor: move;
@@ -75,26 +72,57 @@
         .sidebar__item-title {
           cursor: default;
 
-          > i {
+          &-icon {
             cursor: pointer;
           }
 
-          > em {
+          &-text {
+            overflow: hidden;
             width: calc(100% - 2rem);
-            cursor: text;
             caret-color: auto;
+            cursor: text;
           }
         }
       }
 
-      &.ui-sortable-helper {
-        // 드래그 하는동안 붙는 클래스
-        box-shadow: rgba(0, 0, 0, 0.3) 0.3rem 0.3rem 0.7rem;
-      }
-
       .widget {
+        position: relative;
         z-index: 1;
         border: 1px solid $grey06;
+
+        &__use {
+          display: flex;
+          position: absolute;
+          top: -0.6rem;
+          right: 0;
+          min-width: 0;
+          width: 1.3rem;
+          height: 1.3rem;
+          padding: 0;
+          border-radius: 50%;
+          background-color: $green03;
+          font-size: 1.1rem;
+          color: $grey12;
+          align-items: center;
+          justify-content: center;
+
+          &:before {
+            content: "\e929";
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            font-family: $icon-font;
+          }
+      
+          &--disabled {
+            background-color: $grey09;
+          }
+        }
       }
 
       ul {
