화면단 작업중

--- a/src/assets/scss/views/write.scss
+++ b/src/assets/scss/views/write.scss
@@ -135,11 +135,11 @@
 
    &__title,
    &__link,
-   &__og-description {
+   &__og-desc {
       width: 100%;
    }
 
-   &__og-description {
+   &__og-desc {
       &-refresh {
          min-width: 0;
          width: 1.1rem;
