--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -47,7 +47,7 @@
       box-sizing: border-box;
   
       &:not(.masthead--image) {
-        background-color: $grey14
+        background-color: $main-color;
       }
   
       @media (min-width: $min-big-width) {
@@ -203,7 +203,7 @@
       display: block;
       color: $grey12;
       font-weight: 700;
-      font-size: 2rem;
+      font-size: 1.8rem;
       line-height: 1.2;
       text-align: center;
     }
