--- a/src/assets/scss/components/header.scss
+++ b/src/assets/scss/components/header.scss
@@ -47,7 +47,7 @@
       box-sizing: border-box;
   
       &:not(.masthead--image) {
-        background-color: $main-color;
+        background-color: $grey14;
       }
   
       @media (min-width: $min-big-width) {
