화면단 작업중

--- a/src/assets/scss/views/view.scss
+++ b/src/assets/scss/views/view.scss
@@ -169,6 +169,7 @@
    
             @media (min-width: $min-medium-width) {
                display: inline-block;
+               margin-right: 0.9rem;
             }
    
             & + & {
