--- a/src/assets/scss/views/guestbook.scss
+++ b/src/assets/scss/views/guestbook.scss
@@ -121,6 +121,7 @@
       &--reply {
         &-open {
           display: block;
+          min-width: 0;
           width: 100%;
           height: 1.7rem;
           margin-top: 0.7rem;
