화면단 작업중

--- a/src/assets/scss/basics/util.scss
+++ b/src/assets/scss/basics/util.scss
@@ -81,6 +81,14 @@
   &--20 {
     margin-top: 1rem !important;
   }
+
+  &--25 {
+    margin-top: 1.25rem !important;
+  }
+
+  &--30 {
+    margin-top: 1.5rem !important;
+  }
 }
 
 .mb {
@@ -102,6 +110,14 @@
 
   &--20 {
     margin-bottom: 1rem !important;
+  }
+
+  &--25 {
+    margin-bottom: 1.25rem !important;
+  }
+
+  &--30 {
+    margin-bottom: 1.5rem !important;
   }
 }
 
@@ -125,6 +141,14 @@
   &--20 {
     padding-top: 1rem !important;
   }
+
+  &--25 {
+    padding-top: 1.25rem !important;
+  }
+
+  &--30 {
+    padding-top: 1.5rem !important;
+  }
 }
 
 .pb {
@@ -147,6 +171,14 @@
   &--20 {
     padding-bottom: 1rem !important;
   }
+
+  &--25 {
+    padding-bottom: 1.25rem !important;
+  }
+
+  &--30 {
+    padding-bottom: 1.5rem !important;
+  }
 }
 
 .gap {
@@ -168,6 +200,14 @@
 
   &--20 {
     gap: 1rem !important;
+  }
+
+  &--25 {
+    gap: 1.25rem !important;
+  }
+
+  &--30 {
+    gap: 1.5rem !important;
   }
 }
 
