--- a/src/assets/scss/views/upload.scss
+++ b/src/assets/scss/views/upload.scss
@@ -1,118 +1,121 @@
-.file-upload {
-   min-width: 0;
-   width: 1.5rem;
-   height: 1.5rem;
-   padding: 0;
-   background-color: transparent;
-   line-height: 1.5rem;
-   color: $sub-color03;
-   text-shadow: none;
-   box-shadow: none;
-
-   &__title {
-      margin-bottom: 1.5rem;
-   }
-
-   &__wrapper {
-      font-size: 0.85rem;
-
-      &__inner {
-         display: flex;
-         flex-wrap: wrap;
-         gap: 0.4rem 1rem;
-
-         input[type="radio"] {
-            + label {
-               margin-right: 0;
+.file-upload__wrapper:deep {
+   .file-upload {
+      min-width: 0;
+      width: 1.5rem;
+      height: 1.5rem;
+      padding: 0;
+      background-color: transparent;
+      line-height: 1.5rem;
+      color: $sub-color03;
+      text-shadow: none;
+      box-shadow: none;
+   
+      &__title {
+         margin-bottom: 1.5rem;
+      }
+   
+      &__wrapper {
+         font-size: 0.85rem;
+   
+         &__inner {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.4rem 1rem;
+   
+            input[type="radio"] {
+               + label {
+                  margin-right: 0;
+               }
             }
          }
       }
-   }
-
-   &--attach {
-      display: block;
-      width: 100%;
-      margin: 0;
-      padding: 1rem 1.2rem;
-      background-color: transparent;
-      text-align: left;
-   }
-
-   &__list {
-      margin: 1.5rem 0;
-      border-radius: 0.5rem;
-      border: 1px dashed transparent;
-      background-color: $grey12;
-      box-shadow: rgba(0,0,0,0.3) 1px 1px 0.25rem;
-      transition: border-color 0.2s;
-
-      &--active {
-         border-color: $main-color;
-      }
-
-      &.upload-list {
-         &:hover {
-            border-color: $main-color;
-         }
-
-         ul {
-            border-top: 1px dashed $grey05;
-         }
-      }
-
-      .file-list {
-         p {
-            margin: 0;
-            padding: 1rem 1.2rem;
-         }
-      }
-
-      ul {
-         overflow: auto;
-         max-height: 7.9rem;
+   
+      &--attach {
+         display: block;
+         width: 100%;
          margin: 0;
-         padding-right: 1rem;
+         padding: 1rem;
+         background-color: transparent;
+         text-align: left;
          box-sizing: border-box;
       }
-
-      li {
-         position: relative;
-         margin: 0.7rem 0;
-         padding-right: 1.5rem;
-      }
-   }
-
-   &__btns {
-      display: flex;
-      margin-bottom: 1.5rem;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 0.5rem;
-   }
    
-   &__btn {
-      &--submit {
-         background-color: $main-color;
-         color: $grey12;
-      }
-
-      &--reset {
-         border-color: $black02;
+      &__list {
+         margin-bottom: 1.5rem;
+         border-radius: 0.5rem;
+         border: 1px dashed transparent;
          background-color: $grey12;
+         box-shadow: rgba(0,0,0,0.3) 1px 1px 0.25rem;
+         transition: border-color 0.2s;
+   
+         &--active {
+            border-color: $main-color;
+         }
+   
+         &.upload-list {
+            &:hover {
+               border-color: $main-color;
+            }
+   
+            ul {
+               border-top: 1px dashed $grey05;
+            }
+         }
+   
+         .file-list {
+            p {
+               margin: 0;
+               padding: 1rem 1.2rem;
+            }
+         }
+   
+         ul {
+            overflow: auto;
+            max-height: 7.9rem;
+            margin: 0;
+            padding-right: 1rem;
+            box-sizing: border-box;
+         }
+   
+         li {
+            position: relative;
+            margin: 0.7rem 0;
+            padding-right: 1.5rem;
+         }
+      }
+   
+      &__btns {
+         display: flex;
+         margin-bottom: 1rem;
+         flex-wrap: wrap;
+         justify-content: center;
+         gap: 0.5rem;
+      }
+      
+      &__btn {
+         &--submit {
+            background-color: $main-color;
+            color: $grey12;
+         }
+   
+         &--reset {
+            border-color: $black02;
+            background-color: $grey12;
+            text-shadow: none;
+         }
+      }
+   
+      &--remove {
+         position: absolute;
+         top: 0.2rem;
+         right: 0.2rem;
+         min-width: 0;
+         width: 0.8rem;
+         height: 0.8rem;
+         padding: 0;
+         font-size: 0.65rem;
+         line-height: 0.8rem;
          text-shadow: none;
       }
-   }
-
-   &--remove {
-      position: absolute;
-      top: 0.2rem;
-      right: 0.2rem;
-      min-width: 0;
-      width: 0.8rem;
-      height: 0.8rem;
-      padding: 0;
-      font-size: 0.65rem;
-      line-height: 0.8rem;
-      text-shadow: none;
    }
 }
