--- a/src/assets/scss/views/write.scss
+++ b/src/assets/scss/views/write.scss
@@ -1,344 +1,305 @@
-.write {
-   &__save {
-      &-wrapper {
-         position: absolute;
-         bottom: calc(100% + 1rem);
-         right: 0;
-         z-index: 999;
-         width: 100%;
-         text-align: right;
-
-         @media (min-width: $min-small-width) {
-            float: right;
-            position: sticky;
-            top: 3rem;
-            width: auto;
-            margin-top: -3rem;
-            margin-bottom: 1rem;
-         }
-      }
-
-      &-list {
-         display: none;
-         overflow-y: auto;
-         position: absolute;
-         top: calc(100% + 1.9rem);
-         right: 0;
-         width: 100%;
-         max-height: 11.3rem;
-         margin: 0;
-         padding: 0.7rem;
-         background-color: $grey12;
-         box-sizing: border-box;
-         box-shadow: rgba(0,0,0,0.2) 0 0.25rem 0.75rem;
-         list-style: none;
-         text-align: left;
-
-         @media (min-width: $min-mini-width) {
-            max-height: 10rem;
-         }
-
-         @media (min-width: $min-small-width) {
-            width: 25rem;
-         }
-
-         > li {
-            font-size: 0.75rem;
-            @include clearfix;
-
-            + li {
-               margin-top: 0.5rem;
+.write__wrapper:deep {
+   .write {
+      &__save {
+         &-wrapper {
+            position: absolute;
+            bottom: calc(100% + 1rem);
+            right: 0;
+            z-index: 999;
+            width: 100%;
+            text-align: right;
+   
+            @media (min-width: $min-small-width) {
+               float: right;
+               position: sticky;
+               top: 3rem;
+               width: auto;
+               margin-top: -3rem;
+               margin-bottom: 1rem;
             }
-
-            > a {
-               display: inline-block;
-               vertical-align: middle;
-
+         }
+   
+         &-list {
+            display: none;
+            overflow-y: auto;
+            position: absolute;
+            top: calc(100% + 1.9rem);
+            right: 0;
+            width: 100%;
+            max-height: 11.3rem;
+            margin: 0;
+            padding: 0.7rem;
+            background-color: $grey12;
+            box-sizing: border-box;
+            box-shadow: rgba(0,0,0,0.2) 0 0.25rem 0.75rem;
+            list-style: none;
+            text-align: left;
+   
+            @media (min-width: $min-mini-width) {
+               max-height: 10rem;
+            }
+   
+            @media (min-width: $min-small-width) {
+               width: 25rem;
+            }
+   
+            > li {
+               font-size: 0.75rem;
+               @include clearfix;
+   
+               + li {
+                  margin-top: 0.5rem;
+               }
+   
+               > a {
+                  display: inline-block;
+                  vertical-align: middle;
+   
+                  @media (min-width: $min-mini-width) {
+                     max-width: calc(100% - 8.5rem);
+                     @include ellipsis;
+                  }
+               }
+            }
+   
+            &__delete {
+               min-width: 0;
+               width: 0.8rem;
+               height: 0.8rem;
+               line-height: 0.8rem;
+               margin-right: 0.5rem;
+               padding: 0;
+               border: 0;
+               border-radius: 50%;
+               font-size: 0.8rem;
+               text-shadow: none;
+            }
+   
+            &__date {
+               display: block;
+               margin-top: 0.25rem;
+   
                @media (min-width: $min-mini-width) {
-                  max-width: calc(100% - 8.5rem);
-                  @include ellipsis;
+                  float: right;
+                  margin-top: 0;
                }
             }
          }
-
-         &__delete {
+      }
+   
+      &__frm {
+         > table {
+            margin-top: 0;
+   
+            .cm-s-neo.CodeMirror {
+               font-family: $default-font03;
+            }
+   
+            .mdeditor {
+               &.has-no-preview {
+                  .mdeditor_markdown {
+                     height: 100%;
+                  }
+               }
+   
+               &_toolbar {
+                  margin-bottom: 0.55rem;
+                  border: 1px solid $grey05;
+                  box-shadow: none;
+   
+                  button {
+                     height: 100%;
+                  }
+               }
+   
+               &_scroll {
+                  height: 100%;
+                  background-color: $grey12;
+               }
+   
+               &_body {
+                  overflow: auto;
+                  height: 24rem;
+                  border-color: $grey05;
+                  background-color: $grey12;
+               }
+            }
+         }
+      }
+   
+      &__og-desc {
+         &-refresh {
             min-width: 0;
-            width: 0.8rem;
-            height: 0.8rem;
-            line-height: 0.8rem;
-            margin-right: 0.5rem;
+            width: 1.1rem;
+            height: 1.1rem;
+            line-height: 1.1rem;
+            margin-left: 0.4rem;
             padding: 0;
-            border: 0;
             border-radius: 50%;
+            background-color: $grey12;
             font-size: 0.8rem;
+            color: $sub-color03;
             text-shadow: none;
          }
-
-         &__date {
-            display: block;
-            margin-top: 0.25rem;
-
-            @media (min-width: $min-mini-width) {
-               float: right;
-               margin-top: 0;
-            }
-         }
       }
-   }
-
-   &__frm {
-      > table {
-         margin-top: 0;
-
-         .cm-s-neo.CodeMirror {
-            font-family: $default-font03;
-         }
-
-         .mdeditor {
-            &.has-no-preview {
-               .mdeditor_markdown {
-                  height: 100%;
-               }
-            }
-
-            &_toolbar {
-               margin-bottom: 0.55rem;
-               border: 1px solid $grey05;
-               box-shadow: none;
-
-               button {
-                  height: 100%;
-               }
-            }
-
-            &_scroll {
-               height: 100%;
-               background-color: $grey12;
-            }
-
-            &_body {
-               overflow: auto;
-               height: 24rem;
-               border-color: $grey05;
-               background-color: $grey12;
-            }
-         }
-      }
-
-      textarea {
-         &[name="cont"] {
-            height: 24rem;
-            resize: vertical;
-         }
-      }
-   }
-
-   &__title,
-   &__link,
-   &__og-desc {
-      width: 100%;
-   }
-
-   &__og-desc {
-      &-refresh {
-         min-width: 0;
-         width: 1.1rem;
-         height: 1.1rem;
-         line-height: 1.1rem;
-         margin-left: 0.2rem;
-         padding: 0;
-         border-radius: 50%;
-         background-color: $grey12;
-         font-size: 0.8rem;
-         color: $sub-color03;
-         text-shadow: none;
-      }
-   }
-
-   &__select-category {
-      display: block;
-      width: 100%;
-      margin-bottom: 0.35rem;
-
-      @media (min-width: $min-small-width) {
-         display: inline-block;
-         width: auto;
-         margin-bottom: 0;
-      }
-   }
-
-   &__category {
-      width: calc(100% - 1.1rem);
-      font-size: 0.8rem;
-
-      @media (min-width: $min-small-width) {
-         width: 14.2rem;
-      }
-
-      &__item {
-         display: flex;
-         width: 100%;
-         justify-content: space-between;
-         align-items: center;
-         gap: 0.4rem;
-
-         @media (min-width: $min-small-width) {
-            display: inline-flex;
-            width: auto;
-            vertical-align: middle;
-            justify-content: flex-start;
-         }
-      }
-   }
-
-   &__tag {
-      &__item {
-         display: flex;
+   
+      &__select-category {
+         display: block;
          width: 100%;
          margin-bottom: 0.35rem;
-         border: 1px solid $grey05;
-         background-color: $grey12;
-         justify-content: space-between;
-         align-items: center;
-         flex-wrap: wrap;
-
+   
          @media (min-width: $min-small-width) {
             display: inline-block;
             width: auto;
-            margin-right: 0.35rem;
+            margin-bottom: 0;
+            margin-right: 0.25rem;
+         }
+      }
+   
+      &__category {
+         width: calc(100% - 1.1rem);
+         font-size: 0.8rem;
+   
+         @media (min-width: $min-small-width) {
+            width: 14.2rem;
          }
    
-         > input {
-            &[type="text"] {
-               width: calc(100% - 2.1rem);
-               border: 0;
-               font-size: 0.8rem;
-
-               @media (min-width: $min-small-width) {
-                  width: 10rem;
+         &__item {
+            display: flex;
+            width: 100%;
+            justify-content: space-between;
+            align-items: center;
+            gap: 0.4rem;
+   
+            @media (min-width: $min-small-width) {
+               display: inline-flex;
+               width: auto;
+               vertical-align: middle;
+               justify-content: flex-start;
+            }
+         }
+      }
+   
+      &__tag {
+         &__item {
+            display: flex;
+            width: 100%;
+            margin-bottom: 0.35rem;
+            border: 1px solid $grey05;
+            background-color: $grey12;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+   
+            @media (min-width: $min-small-width) {
+               display: inline-block;
+               width: auto;
+               margin-right: 0.35rem;
+            }
+      
+            > input {
+               &[type="text"] {
+                  width: calc(100% - 2.1rem);
+                  border: 0;
+                  font-size: 0.8rem;
+   
+                  @media (min-width: $min-small-width) {
+                     width: 10rem;
+                  }
                }
             }
          }
       }
-   }
-
-   &__add-category-btn {
-      width: 1.1rem;
-      min-width: 0;
-      height: 1.1rem; 
-      padding: 0; 
-      border-radius: 50%; 
-      background-color: $green03; 
-      font-size: 0.85rem;
-      line-height: 1.1rem;
-      color: $grey12;
-
-      > i {
-         vertical-align: -0.1rem;
-      }
-   }
-
-   &__add-tag-btn {
-      width: 1.1rem;
-      min-width: 0;
-      height: 1.1rem;
-      padding: 0;
-      border-radius: 50%;
-      background-color: $green03;
-      font-size: 0.85rem;
-      line-height: 1.1rem;
-      color: $grey12;
-   }
-
-   &__remove-tag-btn {
-      position: relative;
-      width: 1.1rem;
-      min-width: 0;
-      height: 1.1rem;
-      margin-right: 1rem;
-      padding: 0;
-      border-radius: 50%;
-      border-color: $black02;
-      background-color: $grey12;
-      font-size: 0.85rem;
-      line-height: 1.1rem;
-      text-shadow: none;
-
-      @media (min-width: $min-small-width) {
-         margin-right: 0.5rem;
-      }
-
-      &:before {
-         content: "\e91a";
-         display: inline-block;
-         font-family: $icon-font;
-         font-size: inherit;
-         line-height: 1;
-         vertical-align: -0.05rem;
-         -webkit-font-smoothing: antialiased;
-      }
-
-      &--active {
-         border-color: $main-color;
-         background-color: $main-color;
-         color: $grey12;
-         text-shadow: rgba(0,0,0,0.8) 1px 1px 0.1em;
-      }
-   }
-
-   &__btns {
-      display: flex;
-      margin-top: 1rem;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 0.5rem;
-   }
-
-   &__btn {
-      display: block;
-      width: 100%;
-
-      @media (min-width: $min-mini-width) {
-         display: inline-block;
-         width: auto;
-      }
-      
-      &--upload {
-         border-color: $main-color;
-         background-color: $grey12;
-         text-shadow: none;
-      }
-
-      &--preview {
-         background-color: $green03;
-         color: $grey12;
-      }
-
-      &--save {
-         background-color: $yellow04;
-         color: $grey12;
-      }
-
-      &--load {
+   
+      &__add-category-btn {
+         display: inline-flex;
+         justify-content: center;
+         align-items: center;
+         width: 1.1rem;
          min-width: 0;
-         width: 3rem;
-         height: 3rem;
-         line-height: 1.3;
+         height: 1.1rem; 
+         padding: 0; 
+         border-radius: 50%; 
+         background-color: $green03; 
+         font-size: 0.85rem;
+         color: $grey12;
+   
+         > i {
+            vertical-align: -0.1rem;
+         }
+      }
+   
+      &__add-tag-btn {
+         display: inline-flex;
+         justify-content: center;
+         align-items: center;
+         width: 1.1rem;
+         min-width: 0;
+         height: 1.1rem;
+         padding: 0;
          border-radius: 50%;
-         background-color: $main-color;
-         font-size: 0.8rem;
+         background-color: $green03;
+         font-size: 0.85rem;
          color: $grey12;
       }
-
-      &--submit {
-         background-color: $main-color;
-         color: $grey12;
-      }
-
-      &--reset {
+   
+      &__remove-tag-btn {
+         display: inline-flex;
+         justify-content: center;
+         align-items: center;
+         position: relative;
+         width: 1.1rem;
+         min-width: 0;
+         height: 1.1rem;
+         margin-right: 1rem;
+         padding: 0;
+         border-radius: 50%;
          border-color: $black02;
          background-color: $grey12;
+         font-size: 0.85rem;
          text-shadow: none;
+   
+         @media (min-width: $min-small-width) {
+            margin-right: 0.5rem;
+         }
+   
+         &:before {
+            content: "\e91a";
+            display: inline-block;
+            font-family: $icon-font;
+            font-size: inherit;
+            line-height: 1;
+            vertical-align: -0.05rem;
+            -webkit-font-smoothing: antialiased;
+         }
+   
+         &--active {
+            border-color: $main-color;
+            background-color: $main-color;
+            color: $grey12;
+            text-shadow: rgba(0,0,0,0.8) 1px 1px 0.1em;
+         }
+      }
+   
+      &__btn {
+         display: block;
+         width: 100%;
+   
+         @media (min-width: $min-mini-width) {
+            display: inline-block;
+            width: auto;
+         }
+   
+         &--load {
+            min-width: 0;
+            width: 3rem;
+            height: 3rem;
+            line-height: 1.3;
+            border-radius: 50%;
+            background-color: $main-color;
+            font-size: 0.8rem;
+            color: $grey12;
+         }
       }
    }
 }
